fix: collapse as important

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -25,7 +25,7 @@
 }
 
 .a-table {
-	border-collapse: separate;
+	border-collapse: separate !important;
 	border-spacing: 0;
 
 	&.a-table--fixed {
